--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
     <div class="grid-container">
-            <div class="grid-item">1</div>
-            <div class="grid-item">2</div>
-            <div class="grid-item">3</div>
-            <div class="grid-item">4</div>
-            <div class="grid-item">5</div>
-            <div class="grid-item">6</div>
+            <div class="grid-item header">Header</div>
+            <div class="grid-item sidebar">Sidebar</div>
+            <div class="grid-item conteudo-principal">Conteúdo principal</div>
+            <div class="grid-item footer">Footer</div>
 
     </div>
 </body>
