linhas e colunas automaticas

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 <body>
     <div class="grid-container">
             <div class="grid-item header">Header</div>
-            <div class="grid-item sidebar">Sidebar</div>
-            <div class="grid-item conteudo-principal">Conteúdo principal</div>
+            <div class="grid-item sidebar">
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                    <li>Item 4</li>
+                </ul>
+
+            </div>
+            <div class="grid-item conteudo-principal">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim reiciendis quos odio consequatur libero iusto voluptas cumque doloremque minima omnis, quae deleniti eligendi, facere sint blanditiis. Vitae ut cupiditate tenetur.</p>
+                <img src="img/exemplo.jpg" alt="" width="300px">
+                <img src="img/exemplo.jpg" alt="" width="300px">
+            </div>
             <div class="grid-item footer">Footer</div>
 
     </div>
