--- a/exercicio/ex01.html
+++ b/exercicio/ex01.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Style -->
     <link rel="stylesheet" href="style.css">
-    <title>Exercício</title>
+
+    <title>Exercício de Grid</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+            <div class="nav-menu">
+                <img src="../img/logo-treinaweb.webp" alt="" width="200px">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Categoria</a></li>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
