--- a/exercicio/ex01.html
+++ b/exercicio/ex01.html
@@ -23,7 +23,85 @@
             </div>
         </div>
     </header>
-    <main></main>
-    <footer></footer>
+    
+    <main>
+        <div class="container">
+            <div class="cards-field">
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+                <div class="card">
+                    <img src="../img/exemplo.jpg" alt="Imagem de exemplo" width="100%">
+                    <h3>Título descritivo</h3>
+                    <a href="#">Ver mais</a>
+                </div>
+            </div>
+
+        </div>
+
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Categoria</a></li>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Contato</a></li>
+                    <li><a href="#">Categoria</a></li>
+                    <li><a href="#">Sobre</a></li>
+                </ul>
+            </div>
+            <hr>
+            <p>TreinaWeb</p>
+        </div>
+    </footer>
 </body>
 </html>
